--- a/Lab3/style.css
+++ b/Lab3/style.css
@@ -3,18 +3,20 @@
 }
 
 .full{
+    max-width: 1400px ;
     display: flex;
-    gap: 50px;
+    gap: 30px;
     align-items: center;
     justify-content: center;
+    background-color: #cfdbe4;
 }
 .phieudien {
-    max-width: 1440px;
-    height: 912px;
+    max-width: 700px;
+    height: 700px;
     border-radius: 50px;
     padding: 61px 98px;
-    background:gray;
-    box-shadow: 0px 141px 200px -80px rgba(25, 58, 75, 0.3);
+    background-color: #FFF ;
+    
 
 }
 
@@ -204,7 +206,9 @@ h1 {
 }
 
 .map {
-    width: 638px;
+    width: 600px;
     height: 700px;
     flex-shrink: 0;
+    display: flex;
+    background: #6DE1C2;
 }
