--- a/Lab3/style.css
+++ b/Lab3/style.css
@@ -16,8 +16,6 @@
     border-radius: 50px;
     padding: 61px 98px;
     background-color: #FFF ;
-    
-
 }
 
 .thongtinlienhe {
@@ -146,11 +144,11 @@ h1 {
     color: #8E8E8E;
     width: 490px;
     padding: 40px 16px;
-    flex-direction: column;
     justify-content: center;
     align-items: center;
     gap: 10px;
     border: 1px dashed;
+    display: flex;
 }
 
 .b {
@@ -207,8 +205,9 @@ h1 {
 
 .map {
     width: 600px;
-    height: 700px;
+    height: 810px;
     flex-shrink: 0;
     display: flex;
     background: #6DE1C2;
+    border-radius: 20px;
 }
